Name:                l0c
Version:             0.1
Synopsis:            An optimising compiler for a functional, array-oriented language.
Category:            Language
Build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.10


Executable l0c
  Main-is: Main.hs

  -- Packages needed in order to build this package.
  Build-depends: base >= 4,
                 array >= 0.4,
                 containers >= 0.5,
                 mtl >= 2.1,
                 srcloc >= 0.4,
                 language-c-quote >= 0.7.1,
                 mainland-pretty >= 0.2.5,
                 text

  Other-modules: L0.Parser.Parser,
                 L0.Parser.Lexer

  -- Directories other than the root containing source files.
  hs-source-dirs:      src

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  Build-tools:         alex, happy

  Default-Language:   Haskell2010

  Ghc-Options:        -Wall

  Ghc-Prof-Options:   -prof -auto-all -rtsopts
