Name:                l0c
Version:             0.1
Synopsis:            An optimising compiler for a functional, array-oriented language.
Category:            Language
License:             BSD3
License-file:        LICENSE
Build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.10


Executable l0c
  Main-is: Main.hs

  -- Packages needed in order to build this package.
  Build-depends: base >= 4 && < 5,
                 array >= 0.4,
                 containers >= 0.5,
                 mtl >= 2.1,
                 srcloc >= 0.4,
                 language-c-quote >= 0.7.1,
                 mainland-pretty >= 0.2.5,
                 monad-loops >= 0.4.2,
                 hashable >= 1.2.1.0,
                 unordered-containers >= 0.2.3.3,
                 text

  -- We have to mention these explicitly, or alex and happy won't be
  -- run to generate them.
  Other-modules: Language.L0.Parser.Parser,
                 Language.L0.Parser.Lexer

  -- Directories other than the root containing source files.
  hs-source-dirs:      src

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  Build-tools:         alex, happy

  Default-Language:   Haskell2010

  Ghc-Options:        -Wall

  Ghc-Prof-Options:   -prof -auto-all -rtsopts
